# Magisterka

./: .gitignore  README.md  compose.yaml  dockerfile  pyproject.toml
app/: clustering.py  collapser.py  community_analyser.py  dataclasses_custom.py  loader.py  main.py  parser.py  requirements.txt  shared.py
app/pages/: 1_Loading_data.py  2_Data_Analysis.py
sample_toml_configs/: output.toml
