[tool.poetry]
name = "magisterka"
version = "0.1.0"
description = ""
authors = ["Wajdzik <Zogfryt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
numpy = "<2.0"
neo4j = "^5.27.0"
streamlit = "^1.41.1"
plotly = "^5.24.1"
spacy = "^3.8.3"
graphdatascience = "^1.14"


[tool.poetry.group.cuda.dependencies]
torch = "^2.5.1"
spacy = {extras = ["cuda12x"], version = "^3.8.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
